# vision_submodule

./: CMakeLists.txt  README.md  package.xml
Parameter/: cascade2goal.xml  cascade2soccer.xml
include/FeatureDistance/: FeatureDistance.h
include/LineDetected/: LineDetected.h
include/ModelBase/: ModelBase.h
include/ObjectDetected/: ObjectDetected.h
include/VisionBase/: VisionBase.h
include/main/: imagemain.h
launch/: imageprocess.launch  rvision.launch  vision.launch  vision_old.launch
scripts/SSD/: demo.py
scripts/SSD/configs/: mobilenet_v2_prune_10.yaml  mobilenet_v2_prune_160.yaml  mobilenet_v2_prune_20.yaml  mobilenet_v2_prune_320.yaml  mobilenet_v2_prune_40.yaml  mobilenet_v2_prune_80.yaml
scripts/SSD/configs/test/: mobilenet_v2_prune_320.yaml
scripts/SSD/ssd/config/: __init__.py  defaults.py  path_catlog.py
scripts/SSD/ssd/data/datasets/: voc.py
scripts/SSD/ssd/modeling/: registry.py
scripts/SSD/ssd/modeling/backbone/: __init__.py  mobilenet.py
scripts/SSD/ssd/utils/: registry.py
scripts/SSD/utils/: camera_location.py  field.py  field_location.py  paremeter.py
src/FeatureDistance/: FeatureDistance.cpp
src/LineDetected/: LineDetected.cpp
src/ModelBase/: ModelBase.cpp
src/ObjectDetected/: ObjectDetected.cpp
src/VisionBase/: VisionBase.cpp
src/main/: imagemain.cpp
